--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,19 +17,19 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+38 096 111 11 11</a></li>
+        <li><a href="malito:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
+
     <main>
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
+
       <section>
         <h2>Наші особливості</h2>
-      </section>
-      <section>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -60,24 +60,30 @@
           </li>
         </ul>
       </section>
-      <h2>Чим ми займаємося</h2>
-      <ul>
-        <li><img src="./images/box.jpg" alt="веб технології" width="370" /></li>
-        <li>
-          <img
-            src="./images/box2.jpg"
-            alt="адаптація для мобільних пристроїв"
-            width="370"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/box3.jpg"
-            alt="спільне середовище пк та мобільних пристороїв"
-            width="370"
-          />
-        </li>
-      </ul>
+
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img src="./images/box.jpg" alt="веб технології" width="370" />
+          </li>
+          <li>
+            <img
+              src="./images/box2.jpg"
+              alt="адаптація для мобільних пристроїв"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box3.jpg"
+              alt="спільне середовище пк та мобільних пристороїв"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section>
+
       <section>
         <h2>Наша команда</h2>
         <ul>
@@ -120,6 +126,7 @@
         </ul>
       </section>
     </main>
+
     <footer>
       <a href="./index.html">WebStudio</a>
       <address>
